--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,10 @@
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/barn_imageview"
+        android:id="@+id/barn_imageview_main_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleX="1.5"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,44 +19,44 @@
         app:srcCompat="@drawable/barn_outdoor" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_guide_left_1"
+        android:id="@+id/vertical_guide_left_1_main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.10" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_guide_right_1"
+        android:id="@+id/vertical_guide_right_1_main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.90" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal_guide_top_1"
+        android:id="@+id/horizontal_guide_top_1_main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.35" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal_guide_bottom_1"
+        android:id="@+id/horizontal_guide_bottom_1_main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.85" />
 
     <FrameLayout
-        android:id="@+id/navigation_fragment_container"
+        android:id="@+id/navigation_fragment_container_main_activity"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_bottom_1"
-        app:layout_constraintEnd_toEndOf="@id/vertical_guide_right_1"
-        app:layout_constraintStart_toStartOf="@id/vertical_guide_left_1"
-        app:layout_constraintTop_toTopOf="@id/horizontal_guide_top_1" />
+        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_bottom_1_main_activity"
+        app:layout_constraintEnd_toEndOf="@id/vertical_guide_right_1_main_activity"
+        app:layout_constraintStart_toStartOf="@id/vertical_guide_left_1_main_activity"
+        app:layout_constraintTop_toTopOf="@id/horizontal_guide_top_1_main_activity" />
 
     <FrameLayout
-        android:id="@+id/main_activity_full_screen_fragment_container"
+        android:id="@+id/main_activity_full_screen_fragment_container_main_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
