--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -1,21 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragment.NavigationFragment">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/temp_text_view"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_guide_left_1_navigation_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Navigation Fragment"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
 
-</LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_guide_right_1_navigation_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:showDividers="middle"
+        android:divider="@drawable/gap_vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/vertical_guide_right_1_navigation_fragment"
+        app:layout_constraintStart_toStartOf="@id/vertical_guide_left_1_navigation_fragment"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/feed_animals_navigation_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            android:scrollHorizontally="false"
+            android:background="@drawable/click_navigation_button"
+            android:layout_gravity="center"
+            android:text="FEED ANIMALS"
+            android:textAlignment="center"
+            android:textColor="@color/brown_dark"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/meet_the_farmer_navigation_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            android:scrollHorizontally="false"
+            android:background="@drawable/click_navigation_button"
+            android:layout_gravity="center"
+            android:text="MEET THE FARMER"
+            android:textAlignment="center"
+            android:textColor="@color/brown_dark"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/shop_feed_navigation_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            android:scrollHorizontally="false"
+            android:background="@drawable/click_navigation_button"
+            android:layout_gravity="center"
+            android:text="SHOP FEED"
+            android:textAlignment="center"
+            android:textColor="@color/brown_dark"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/settings_navigation_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            android:scrollHorizontally="false"
+            android:background="@drawable/click_navigation_button"
+            android:layout_gravity="center"
+            android:text="SETTINGS"
+            android:textAlignment="center"
+            android:textColor="@color/brown_dark"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
