--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,10 @@
     <!-- Current opacity for following color = 75% i.e. in hex = BF -->
     <color name="white_translucent_splash_screen">#BFFFFFFF</color>
     <!-- Current opacity for following color = 40% i.e. in hex = 66 -->
+    <color name="white_translucent_click_effect">#BFFFFFFF</color>
+    <!-- Current opacity for following color = 80% i.e. in hex = CC -->
+    <color name="black_translucent">#CC000000</color>
+    <!-- Current opacity for following color = 40% i.e. in hex = 66 -->
     <color name="white_dialog_background_translucent">#66FFFFFF</color>
     <color name="brown_dark">#7B3F00</color>
     <color name="brown_light">#C4A484</color>
