--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -19,18 +19,38 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/barn_indoor" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/temp_settings_fragment"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/settings_fragment_title_frame_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Settings Fragment"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/rounded_corner_fragment_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title_settings_fragment_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scrollHorizontally="false"
+            android:text="SETTINGS"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/title_back_settings_fragment_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginVertical="8dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/click_button_small"
+            android:contentDescription="Back button for closing SettingsFragment"
+            android:padding="6dp"
+            app:srcCompat="@drawable/back_arrow" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
