--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="malachite_green">#0BDA51</color>
+    <color name="spotify_green">#1DB954</color>
 
     <color name="transparent_color">@android:color/transparent</color>
     <!-- Current opacity for following color = 75% i.e. in hex = BF -->
