--- a/app/src/main/res/layout/fragment_farmer.xml
+++ b/app/src/main/res/layout/fragment_farmer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
@@ -18,6 +18,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/barn_indoor" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_guide_left_1_farmer_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.10" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_guide_right_1_farmer_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.90" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_guide_top_1_farmer_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.575" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_guide_bottom_1_farmer_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_guide_bottom_2_farmer_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.925" />
 
     <FrameLayout
         android:id="@+id/farmer_fragment_title_frame_layout"
@@ -51,6 +86,53 @@
             android:contentDescription="Back button for closing FarmerFragment"
             android:padding="6dp"
             app:srcCompat="@drawable/back_arrow" />
+    </FrameLayout>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/farmer_imageview_farmer_fragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        android:scaleY="1.2"
+        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_bottom_1_farmer_fragment"
+        app:layout_constraintEnd_toEndOf="@id/vertical_guide_right_1_farmer_fragment"
+        app:layout_constraintStart_toStartOf="@id/vertical_guide_left_1_farmer_fragment"
+        app:layout_constraintTop_toTopOf="@id/horizontal_guide_top_1_farmer_fragment"
+        app:srcCompat="@drawable/farmer" />
+
+    <FrameLayout
+        android:id="@+id/premium_member_frame_layout_farmer_fragment"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_top_1_farmer_fragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/premium_member_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="4dp"
+            android:scaleY="1.4"
+            android:scaleType="fitXY"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/premium_member" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/premium_member_access_background_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/rounded_corner_premium_member_background" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/premium_member_access_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            app:srcCompat="@drawable/farmer_premium_locked" />
+
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
