--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,8 @@
     <color name="black_translucent">#CC000000</color>
     <!-- Current opacity for following color = 40% i.e. in hex = 66 -->
     <color name="white_dialog_background_translucent">#66FFFFFF</color>
+    <!-- Current opacity for following color = 40% i.e. in hex = 66 -->
+    <color name="black_dialog_background_translucent">#66000000</color>
     <color name="brown_dark">#7B3F00</color>
     <color name="brown_light">#C4A484</color>
 </resources>
